--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,10 @@
 </mdb-navbar>
 <!-- Main -->
 <main>
-  <div class="container" style="height:1300px;">
+<section>
+        <img src="https://version1.sharepoint.com/pf/sales/brand/Images%20new/Dublin%20-%20the%20Convention%20Centre%20night%20time.jpg" class="img-fluid" alt="Responsive image">
+    </section>
+  <div class="container" style="height:900px;">
       <div class="row mt-5 pt-5">
         <section>
 
@@ -102,5 +105,173 @@
       </section>
   </div>
   </div>
+
+    <!-- <div class="row">
+        <h2 style="color: white">Meet the team</h2>
+    </div> -->
+<section style="Height:600px; background-color: #bdbdbd;">
+  <div class="row" style="Height:100px;">
+      <h2 style="padding-left:50px; padding-top:30px; color:white;">Meet the team</h2>
+  </div>
+  <div class="row" style="padding-left:50px; padding-right:50px;">
+        <!--Grid column-->
+        <div class="col-md-6">
+    
+            <!--Card-->
+            <div class="card testimonial-card">
+    
+                <!--Bacground color-->
+                <div class="card-up indigo lighten-1">
+                </div>
+    
+                <!--Avatar-->
+                <div class="avatar mx-auto"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle">
+                </div>
+    
+                <div class="card-body">
+                    <!--Name-->
+                    <h4 class="card-title">Anna Doe</h4>
+                    <hr>
+                    <!--Quotation-->
+                    <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, adipisci</p>
+                </div>
+    
+            </div>
+            <!--/.Card-->
+    
+        </div>
+        <!--Grid column-->
+    
+        <!--Grid column-->
+        <div class="col-md-6">
+    
+            <!--Card-->
+            <div class="card testimonial-card">
+    
+                <!--Bacground color-->
+                <div class="card-up aqua-gradient">
+                </div>
+    
+                <!--Avatar-->
+                <div class="avatar mx-auto"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2831%29.jpg" class="rounded-circle img-responsive">
+                </div>
+    
+                <div class="card-body">
+                    <!--Name-->
+                    <h4 class="card-title">Martha Smith</h4>
+                    <hr>
+                    <!--Quotation-->
+                    <p><i class="fa fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, adipisci</p>
+                </div>
+    
+            </div>
+            <!--/.Card-->
+    
+        </div>
+        <!--Grid column-->
+    
+    </div>
+    </section>
+    <section>
+
+            <!--Section heading-->
+            <h2 class="text-center h1 py-5">Contact us</h2>
+            <!--Section description-->
+            <p class="text-center mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi,
+                veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.</p>
+        
+            <div class="row">
+        
+                <!--Grid column-->
+                <div class="col-md-8 col-xl-9">
+                    <!-- <form> -->
+                            <form class="example-form">
+                            <!-- <div class="example-container"> -->
+                                <div class="row">
+                                        <div class="col-md-6">
+                                    <mat-form-field>
+                                      <input matInput placeholder="Enter your email" [formControl]="email" required>
+                                      <!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error> -->
+                                    </mat-form-field>
+                                    </div>
+                                   
+                                    <div class="col-md-6">
+                                    <mat-form-field>
+                                            <input matInput placeholder="Enter Your Name" [formControl]="name" required>
+                                          </mat-form-field>
+                                          </div>
+                                        </div>
+                                    <div class="row">
+                                    <mat-form-field>
+                                                <textarea matInput placeholder="Message"></textarea>
+                                    </mat-form-field>
+                                    </div>
+                                  <!-- </div> -->
+                            </form>
+                    <div class="text-center text-md-left">
+                        <a class="btn btn-primary btn-md">Send</a>
+                    </div>
+                </div>
+                <!--Grid column-->
+        
+                <!--Grid column-->
+                <div class="col-md-4 col-xl-3 text-center">
+                    <ul class="list-unstyled">
+                        <li>
+                            <i class="fa fa-map-marker fa-2x blue-text"></i>
+                            <p>San Francisco, CA 94126, USA</p>
+                        </li>
+        
+                        <li>
+                            <i class="fa fa-phone fa-2x mt-4 blue-text"></i>
+                            <p>+ 01 234 567 89</p>
+                        </li>
+        
+                        <li>
+                            <i class="fa fa-envelope fa-2x mt-4 blue-text"></i>
+                            <p>contact@mdbootstrap.com</p>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+        
+            </div>
+            <footer class="page-footer red darken-4 pt-4 mt-4">
+
+                    <!--Footer Links-->
+                    <div class="container-fluid text-center text-md-left">
+                        <div class="row">
+                
+                            <!--First column-->
+                            <div class="col-md-6">
+                                <h5 class="title">Footer Content</h5>
+                                <p>Here you can use rows and columns here to organize your footer content.</p>
+                            </div>
+                            <!--/.First column-->
+                
+                            <!--Second column-->
+                            <div class="col-md-6">
+                                <h5 class="title">Links</h5>
+                                <ul class="list-unstyled">
+                                    <li><a href="#">Link 1</a></li>
+                                    <li><a href="#">Link 2</a></li>
+                                    <li><a href="#">Link 3</a></li>
+                                    <li><a href="#">Link 4</a></li>
+                                </ul>
+                            </div>
+                            <!--/.Second column-->
+                        </div>
+                    </div>
+                    <!--/.Footer Links-->
+                
+                    <!--Copyright-->
+                    <div class="footer-copyright text-center py-3">
+                        <div class="container-fluid">
+                            © 2017 Copyright: <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
+                        </div>
+                    </div>
+                    <!--/.Copyright-->
+                </footer>
+        </section>
 </main>
 <router-outlet></router-outlet>
